2008-08-22  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shlwapi.h (ASSOCF_INIT_NOREMAPCLSID, ASSOCF_INIT_BYEXENAME,
	ASSOCF_OPEN_BYEXENAME, ASSOCF_INIT_DEFAULTTOSTAR,
	ASSOCF_INIT_DEFAULTTOFOLDER, ASSOCF_NOUSERSETTINGS, ASSOCF_NOTRUNCATE,
	ASSOCF_VERIFY, ASSOCF_REMAPRUNDLL, ASSOCF_NOFIXUPS, ASSOCF_IGNOREBASECLASS,
	ASSOCF_INIT_IGNOREUNKNOWN): Define.

2008-08-22  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/commctrl.h (LVN_MARQUEEBEGIN): Define.

	Thanks to Tim Kosse <botg at users dot sf dot net>.

2008-08-22 Bo Yang <techrazy@users.sourceforge.net>

	* include/winnt.h (OWNER_SECURITY_INFORMATION, GROUP_SECURITY_INFORMATION,
	DACL_SECURITY_INFORMATION, SACL_SECURITY_INFORMATION): Correct.
	* include/winnt.h (OWNER_SECURITY_INFORMATION, GROUP_SECURITY_INFORMATION,
	DACL_SECURITY_INFORMATION, SACL_SECURITY_INFORMATION,
	LABEL_SECURITY_INFORMATION, UNPROTECTED_SACL_SECURITY_INFORMATION,
	UNPROTECTED_DACL_SECURITY_INFORMATION, PROTECTED_SACL_SECURITY_INFORMATION,
	PROTECTED_DACL_SECURITY_INFORMATION): Define.

2008-08-19  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/wtsapi32.h (_WTS_INFO_CLASS, _WTS_CONNECTSTATE_CLASS,
	WTSQuerySessionInformation, WTSFreeMemory): Define.

2008-07-25 Bo Yang <techrazy@users.sourceforge.net>

	* lib/gdi32.def (SetLayout): Export.

2008-07-25 Bo Yang <techrazy@users.sourceforge.net>

	* include/wincrypt.h  (struct _CRYPT_KEY_PROV_PARAM, 
	struct _CRYPT_KEY_PROV_INFO, CertGetCertificateContextProperty,
	CryptEnumKeyIdentifierProperties, CryptAcquireCertificatePrivateKey,
	CertCreateCertificateContext, CryptGetKeyIdentifierProperty,
	CertSetCertificateContextProperty, CertCompareCertificateName, 
	CryptSetKeyIdentifierProperty, CertOIDToAlgId, CryptGetDefaultProviderA,
	CryptGetDefaultProviderW and many corresponding macroes): Define.
	* lib/crypt32.def  (Export the above 11 functions): Export.
	* include/winerror.h  (CRYPT_E_NOT_FOUND and other crypt related
	macroes): Define.
	
